--- a/main.html
+++ b/main.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
-  <head>
-    <title>上古卷轴</title>
-    <body>
-      <h1>一级标题</h1>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>这里填写标题</title>
+
+</head>
+
+<body>
+ <h1>一级标题</h1>
       <img alt="没有图片" src="http://bbsimg.gamersky.com/attachments/forum/201506/27/123830sgm9f2moff22gund.jpg">
-     </body>
-  </head>
+
+</body>
 </html>
