--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 </head>
 
 <body>
- <h1>一级标题</h1>
- <h2>二级标题</h2>
- <h3>三级标题</h3>
+ <img src="http://bbsimg.gamersky.com/attachments/forum/201506/27/123830sgm9f2moff22gund.jpg">
    
 
 </body>
