--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-  	<meta property="og:title" content=" My New Hugo Site" />
-  	<meta property="og:site_name" content="My New Hugo Site" />
+  	<meta property="og:title" content="Jizargo的主页" />
+  	<meta property="og:site_name" content="Jizargo的主页" />
   	<meta property="og:url" content="https://jizargo.github.io/" />
     
     
