--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="vertical">
         <div class="main-header-content inner">
             <h1 class="page-title">
-              <a class="btn-bootstrap-2 title-scroll" href="#content">My Site</a>
+              <a class="btn-bootstrap-2 title-scroll" href="#content">Welcome My Site</a>
           </h1>
           <h2 class="page-description"></h2>
         </div>
