--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="extra-pagination inner">
         <nav class="pagination" role="navigation">
 	
-	<span class="page-number">Page 1 of 0</span>
+	<!--><span class="page-number">Page 1 of 0</span><-->
 	
 </nav>
 
@@ -89,7 +89,7 @@
 
     <nav class="pagination" role="navigation">
 	
-	<span class="page-number">Page 1 of 0</span>
+	<!--><span class="page-number">Page 1 of 0</span><-->
 	
 </nav>
 
