--- a/index.html
+++ b/index.html
@@ -77,21 +77,21 @@
     
 
     <div class="extra-pagination inner">
-        <nav class="pagination" role="navigation">
+        <!--><nav class="pagination" role="navigation">
 	
-	<!--><span class="page-number">Page 1 of 0</span><-->
+	<span class="page-number">Page 1 of 0</span>
 	
-</nav>
+</nav><-->
 
     </div>
 
     
 
-    <nav class="pagination" role="navigation">
+    <!--><nav class="pagination" role="navigation">
 	
-	<!--><span class="page-number">Page 1 of 0</span><-->
+	<span class="page-number">Page 1 of 0</span>
 	
-</nav>
+</nav><-->
 
 
 </main>
