--- a/index.html
+++ b/index.html
@@ -66,24 +66,25 @@
             <h1 class="page-title">
               <a class="btn-bootstrap-2 title-scroll" href="#content">Start Learning</a>
           </h1>
-          <h2 class="page-description"></h2>
+          <h2 class="page-description">开始界面</h2>
         </div>
+	<hr>
 </div>
-    <a class="scroll-down icon-arrow-left" href="#content"><span class="hidden">Scroll Down</span></a>
+    <!--<a class="scroll-down icon-arrow-left" href="#content"><span class="hidden">这是什么 Scroll Down</span></a>-->
 </header>
 
 <main id="content" class="content" role="main">
 
     
 
-    <div class="extra-pagination inner">
+    <!--<div class="extra-pagination inner">
         <nav class="pagination" role="navigation">
 	
 	<span class="page-number">Page 1 of 0</span>
 	
 </nav>
 
-    </div>
+    </div>-->
 
     
 
