--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
 
 <main id="content" class="content" role="main">
 
-    
+    <a href="http://github.com/Jizargo/Jizargo.github.io/404.html">404页面</a>
+<br/>
+	<a href="http://github.com/Jizargo/Jizargo.github.io/index.xml">不知道什么界面</a>
 
     <!--<div class="extra-pagination inner">
         <nav class="pagination" role="navigation">
@@ -88,11 +90,11 @@
 
     
 
-    <nav class="pagination" role="navigation">
+    <!--<nav class="pagination" role="navigation">
 	
 	<span class="page-number">Page 1 of 0</span>
 	
-</nav>
+</nav>-->
 
 
 </main>
