--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 
   	<meta property="og:title" content=" 404 Page not found &middot;  My New Hugo Site" />
   	<meta property="og:site_name" content="My New Hugo Site" />
-  	<meta property="og:url" content="" />
+  	<meta property="og:url" content="https://jizargo.github.io/404/" />
     
     
     <meta property="og:type" content="website" />
