--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 <main id="content" class="content" role="main">
 
-    <a href="http://github.com/Jizargo/Jizargo.github.io/404.html">404页面</a>
+    <p><a href="http://github.com/Jizargo/Jizargo.github.io/404">404页面</a></p>
 <br/>
 	<a href="http://github.com/Jizargo/Jizargo.github.io/index.xml">不知道什么界面</a>
 
