--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
               <a class="btn-bootstrap-2 title-scroll" href="#content">Start Learning</a>
           </h1>
           <h2 class="page-description">开始界面</h2>
-		<h3 class="page-description">
-			<a href="http://github.com/Jizargo/Jizargo.github.io/404">404页面</a>
+		<h3 class="page-button">
+			<a href="https://jizargo.github.io/404">404页面</a>
 		</h3>
         </div>
 	<hr>
