--- a/index.html
+++ b/index.html
@@ -66,13 +66,15 @@
             <h1 class="page-title">
               <a class="btn-bootstrap-2 title-scroll" href="#content">Start Learning</a>
           </h1>
-          <h2 class="page-description">开始界面</h2>
+          <h2 class="page-description">
+		<audio src="https://jizargo.github.io/music/李玲玉 - 女儿情.mp3" controls="controls"></audio>
+	  </h2>
 		<h3 class="page-button">
 			<a href="https://jizargo.github.io/404">404页面</a>
 		</h3>
         </div>
 	<hr>
-	<audio src="https://jizargo.github.io/music/李玲玉 - 女儿情.mp3" controls="controls"></audio>
+	
 </div>
     <a class="scroll-down icon-arrow-left" href="#content"><span class="hidden">这是什么 Scroll Down</span></a>
 </header>
